--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -5,45 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <!-- Google Fonts link -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+  <!-- CSS Link -->
+  <link rel="stylesheet" href="style.css">   
   <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Join our community
+  <section class="block1">
+    <h1>
+      Join our community
+    </h1>
+    <h2>  
+      30-day, hassle-free money back guarantee
+    </h2>
+    <p>
+      Gain access to our full library of tutorials along with expert code reviews. 
+    </p>
+    <p>
+      Perfect for any developers who are serious about honing their skills.
+    </p>
+  </section>
 
-  30-day, hassle-free money back guarantee
+  <div class="rowTwo">
+    <section class="block2">
+      <h3>
+        Monthly Subscription
+      </h3>
+      <p>
+        &dollar;29 per month
+      </p>
+      <p>
+      Full access for less than &dollar;1 a day
+      </p>
+      <div>
+        Sign Up
+      </div>
+    </section>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
+    <section class="block3">
+      <h3>
+        Why Us
+      </h3>
+      <p>
+        Tutorials by industry experts<br>
+        Peer &amp; expert code review<br>
+        Coding exercises<br>
+        Access to our GitHub repos<br>
+        Community forum<br>
+        Flashcard decks<br>
+        New videos every week
+      </p>
+    </section>
+  </div>
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      <!-- Link to my Github page, using target=blank to open in new tab --> 
+      Coded by <a href="https://github.com/RobertJamesFritz" target="_blank">Robert Fritz</a>.
     </p>
   </footer>
 </body>
