--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -14,23 +14,23 @@
   <title>Frontend Mentor | Single Price Grid Component</title>
 </head>
 <body>
-  <section class="block1">
-    <h1>
-      Join our community
-    </h1>
-    <h2>  
-      30-day, hassle-free money back guarantee
-    </h2>
-    <p>
-      Gain access to our full library of tutorials along with expert code reviews. 
-    </p>
-    <p>
-      Perfect for any developers who are serious about honing their skills.
-    </p>
-  </section>
-
-  <div class="rowTwo">
-    <section class="block2">
+  <section>
+    <div class="container">
+    <div class=" block block1">
+      <h2>
+        Join our community
+      </h2>
+      <h3>  
+        30-day, hassle-free money back guarantee
+      </h3>
+      <p>
+        Gain access to our full library of tutorials along with expert code reviews. 
+      </p>
+      <p>
+        Perfect for any developers who are serious about honing their skills.
+      </p>
+    </div>
+    <div class="block block2">
       <h3>
         Monthly Subscription
       </h3>
@@ -40,12 +40,11 @@
       <p>
       Full access for less than &dollar;1 a day
       </p>
-      <div>
+      <a>
         Sign Up
-      </div>
-    </section>
-
-    <section class="block3">
+      </a>
+    </div>
+    <div class="block block3">
       <h3>
         Why Us
       </h3>
@@ -58,8 +57,9 @@
         Flashcard decks<br>
         New videos every week
       </p>
-    </section>
-  </div>
+    </div></div>
+  </section>
+
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
