--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -16,48 +16,47 @@
 <body>
   <section>
     <div class="container">
-    <div class=" block block1">
-      <h2>
-        Join our community
-      </h2>
-      <h3>  
-        30-day, hassle-free money back guarantee
-      </h3>
-      <p>
-        Gain access to our full library of tutorials along with expert code reviews. 
-      </p>
-      <p>
-        Perfect for any developers who are serious about honing their skills.
-      </p>
+      <div class=" block block1">
+        <h2>
+          Join our community
+        </h2>
+        <h3>  
+          30-day, hassle-free money back guarantee
+        </h3>
+        <p>
+          Gain access to our full library of tutorials along with expert code reviews.
+          Perfect for any developers who are serious about honing their skills.
+        </p>
+      </div>
+      <div class="block block2">
+        <h3>
+          Monthly Subscription
+        </h3>
+        <p>
+          <span>&dollar;29</span> per month
+        </p>
+        <p>
+        Full access for less than &dollar;1 a day
+        </p>
+        <a href="#" class="button">
+          Sign Up
+        </a>
+      </div>
+      <div class="block block3">
+        <h3>
+          Why Us
+        </h3>
+        <p>
+          Tutorials by industry experts<br>
+          Peer &amp; expert code review<br>
+          Coding exercises<br>
+          Access to our GitHub repos<br>
+          Community forum<br>
+          Flashcard decks<br>
+          New videos every week
+        </p>
+      </div>
     </div>
-    <div class="block block2">
-      <h3>
-        Monthly Subscription
-      </h3>
-      <p>
-        &dollar;29 per month
-      </p>
-      <p>
-      Full access for less than &dollar;1 a day
-      </p>
-      <a>
-        Sign Up
-      </a>
-    </div>
-    <div class="block block3">
-      <h3>
-        Why Us
-      </h3>
-      <p>
-        Tutorials by industry experts<br>
-        Peer &amp; expert code review<br>
-        Coding exercises<br>
-        Access to our GitHub repos<br>
-        Community forum<br>
-        Flashcard decks<br>
-        New videos every week
-      </p>
-    </div></div>
   </section>
 
   <footer>
